# sysml-copier

./: .gitignore  LICENSE  README.md  copier.yml
{{project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
{{project_slug}}/.github/workflows/: ci.yml
{{project_slug}}/docs/: developing.md  getting-started.md  index.md
{{project_slug}}/licenses/: Apache-2.0.txt  GPL-3.0.txt  MIT.txt  proprietary.txt
{{project_slug}}/notebooks/: model_exploration.ipynb
{{project_slug}}/src/{{project_slug}}/examples/: analyze_model.py  navigate_model.py  render_diagrams.py
{{project_slug}}/sysml/models/: mymodel.sysml
{{project_slug}}/tests/: test_model.py
